# sharing-service-yfrog

./: configure  configure.ac
data/: Makefile.am  template.service.xml.in  yfrog.service.xml.in
debian/: changelog  control  sharing-plugin-yfrog.prerm
src/: Makefile.am  Makefile.in  plugin.c  send.c  send.h  validate.c
