#
# This file is part of sharing-plugin-template
#
# Copyright (C) 2008-2009 Nokia Corporation. All rights reserved.
#
# This maemo code example is licensed under a MIT-style license,
# that can be found in the file called "COPYING" in the root
# directory.
#

services_DATA = yfrog.service.xml yfrog-post.png yfrog-setup.png

EXTRA_DIST = $(services)

MAINTAINERCLEANFILES = Makefile.in

